--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -8,10 +8,7 @@
   <div class= "panel">
     <div class= "panel-section-body">
       <div class= "panel-list-item">
-        <img class= "item_icon" src= "../res/icons/article-32.png"><a href= "#" class= "default" data-i18n = "menuCommonReplies" id= "menuCommonReplies" ></a>
-      </div>
-      <div class= "panel-list-item">
-				<img class= "item_icon" src= "../res/icons/article-32.png"><a href= "#" class= "default" data-i18n = "menuSocialSupportGuidelines" id= "btnMoreOptionsGuidelines"></a><img class= "item_icon_right" src= "../res/icons/arrowhead-down.png" id= "image_submenu_guidelines"/>
+				<img class= "item_icon" src= "../res/icons/folder_closed-32.png" id= "folderGuidelines"><a href= "#" class= "default" data-i18n = "menuSocialSupportGuidelines" id= "btnMoreOptionsGuidelines"></a><img class= "item_icon_right" src= "../res/icons/arrowhead-down.png" id= "image_submenu_guidelines"/>
       </div>
       <div class="dropdown-container"  id="optionsGuidelines">
         <div class= "panel-list-item">
@@ -25,7 +22,7 @@
         </div>
     </div>
     <div class= "panel-list-item">
-      <img class= "item_icon" src= "../res/icons/article-32.png"><a href= "#" class= "default" data-i18n = "menuRolesInTheSocialSupportProgram" id="btnMoreOptionsRoles" ></a><img class= "item_icon_right" src= "../res/icons/arrowhead-down.png" id= "image_submenu_roles"/>
+      <img class= "item_icon" src= "../res/icons/folder_closed-32.png" id= "folderRoles"><a href= "#" class= "default" data-i18n = "menuRolesInTheSocialSupportProgram" id="btnMoreOptionsRoles" ></a><img class= "item_icon_right" src= "../res/icons/arrowhead-down.png" id= "image_submenu_roles"/>
     </div>
     <div class="dropdown-container"  id="optionsRoles">
       <div class= "panel-list-item">
@@ -42,7 +39,24 @@
       </div>
   </div>
   <div class= "panel-list-item">
+    <img class= "item_icon" src= "../res/icons/folder_video_closed-32.png" id= "folderVideos"><a href= "#" class= "default" data-i18n = "menuVideoFolder" id="btnMoreOptionsVideos" ></a><img class= "item_icon_right" src= "../res/icons/arrowhead-down.png" id= "image_submenu_videos"/>
+  </div>
+  <div class="dropdown-container"  id="optionsVideos">
+    <div class= "panel-list-item">
+      <img class= "item_icon_options" src= "../res/icons/play_button-32.png"><a href="#" class= "defaultOptions" data-i18n= "menuVideoConfiguringTweetDeck" id= "menuVideoConfiguringTweetDeck"></a>
+    </div>
+    <div class= "panel-list-item">
+      <img class= "item_icon_options" src= "../res/icons/play_button-32.png"><a href="#" class= "defaultOptions" data-i18n= "menuVideoHowIgnoreUser" id= "menuVideoHowIgnoreUser"></a>
+    </div>
+    <div class= "panel-list-item">
+      <img class= "item_icon_options" src= "../res/icons/play_button-32.png"><a href="#" class= "defaultOptions" data-i18n= "menuVideoGetOldAnswersFromAoA" id="menuVideoGetOldAnswersFromAoA"></a>
+    </div>
+  </div>
+  <div class= "panel-list-item">
     <img class= "item_icon" src= "../res/icons/article-32.png"><a href= "#" class= "default" data-i18n = "menuConfiguringTweetDeck" id= "menuConfiguringTweetDeck"></a>
+  </div>
+  <div class= "panel-list-item">
+    <img class= "item_icon" src= "../res/icons/article-32.png"><a href= "#" class= "default" data-i18n = "menuCommonReplies" id= "menuCommonReplies" ></a>
   </div>
       <div class= "panel-section-separator"></div>
       <div>
