--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -62,6 +62,9 @@
       <div>
         <a id= "joinUS" class= "joinUS" data-i18n= "menuJoinUS"></a>
       </div>
+      <div class = "panel-list-item">
+        <img class= "item_icon" src="../res/icons/article_survey-32.png"><a href= "#" class= "default" data-i18n = "menuItemSurvey" id= "menuItemSurvey"></a>
+      </div>
 			<div class= "panel-list-item">
 				<img class= "item_icon" src= "../res/icons/telegram-32.png"><a href= "#" class= "default" data-i18n = "menuItemTelegram" id= "menuTelegram"></a>
       </div>
