--- a/src/html/about.html
+++ b/src/html/about.html
@@ -17,7 +17,7 @@
             <ul>
                 <li>
                     <a href="https://github.com/jhonatasrm/social-helpers/" title="Github" target="_blank"><img src="../res/icons/github.png" width="20" height="20" style="margin-bottom:7px;"></a>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=jhonatasrm@gmail.com&lc=US&item_name=Donation+to+Social+Helpers&no_note=0&cn=&curency_code=USD&bn=PP-DonationsBF:btn_donateCC_LG.gif:NonHosted" title="Donate" target="_blank"><img src="../res/icons/paypal.png" width="32" height="32"></a>
+                    <a href='https://ko-fi.com/S6S5S3WU' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com'/></a>
                 </li>
             </ul>
         </nav>
@@ -45,50 +45,8 @@
             <li style="text-align:justify;margin-left:10px;" id="aboutItem7" data-i18n="aboutItem7"></li>
         </ul>
         <div style="margin-top:2%; text-align:justify;" data-i18n="bugs" id="bugs"></div><br>
-        <img id="changelogMenuImage" class="imageMenu"> <img id="changelogMenu" class="down-arrow" src="../res/icons/arrow_down-32.png"><img id="upArrow" class="up-arrow" src="../res/icons/arrow_up-32.png"><br>
-        <div class="changelogPanel" id='changelogPanel' style="background-color:white; margin-top:-1%;text-align:justify;">
-            <h3 id="changelog" data-i18n="changelog"></h3>
-            <ul style="text-align:justify;">
-                <li>
-                    <strong id="release8d" data-i18n="release8d"></strong><br/>
-                    <p id="release8" data-i18n="release8"></p>
-                </li>
-                <li>
-                    <strong id="release7d" data-i18n="release7d"></strong><br/>
-                    <p id="release7" data-i18n="release7"></p>
-                </li>
-                <li>
-                    <strong id="release6d" data-i18n="release6d"></strong><br/>
-                    <p id="release6" data-i18n="release6"></p>
-                </li>
-                <li>
-                    <strong id="release5d" data-i18n="release5d"></strong><br/>
-                    <p id="release5" data-i18n="release5"></p>
-                </li>
-                <li>
-                    <strong id="release4d" data-i18n="release4d"></strong><br/>
-                    <p id="release4" data-i18n="release4"></p>
-                </li>
-                <li>
-                    <strong id="release3d" data-i18n="release3d"></strong><br/>
-                    <p id="release3" data-i18n="release3"></p>
-                </li>
-                <li>
-                    <strong id="release2d" data-i18n="release2d"></strong><br/>
-                    <p id="release2" data-i18n="release2"></p>
-                </li>
-                <li>
-                <li>
-                    <strong id="release1d" data-i18n="release1d"></strong><br/>
-                    <p id="release1" data-i18n="release1"></p>
-                </li>
-                <strong id="release0d" data-i18n="release0d"></strong><br/>
-                <p id="release0" data-i18n="release0"></p>
-                </li>
-            </ul>
-        </div>
+    </fieldset>
 </main>
 <script type="text/javascript" src="../js/language.js"></script>
-<script type="text/javascript" src="../js/changelogMenu.js"></script>
 </body>
 </html>
