--- a/src/html/about.html
+++ b/src/html/about.html
@@ -16,7 +16,7 @@
         <nav class="icons" style="margin-right:-8px;">
             <ul>
                 <li>
-                    <a href="https://github.com/jhonatasrm/social-helpers/" title="Github" target="_blank"><img src="../res/icons/github.png" width="20" height="20" style="margin-bottom:7px;"></a>
+                    <a href="https://github.com/jhonatasrm/social-helpers/" title="Github" target="_blank"><img src="../res/icons/github.png" width="20" height="20" style="margin-bottom:7px;margin-right:15px;"></a>
                     <a href='https://ko-fi.com/S6S5S3WU' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com'/></a>
                 </li>
             </ul>
