--- a/src/html/about.html
+++ b/src/html/about.html
@@ -6,8 +6,8 @@
     <title id="about_title" data-i18n="about_title"></title>
     <link rel="shortcut icon" href="../res/icons/favicon.ico" type="image/x-icon"/>
     <link rel="icon" href="../res/icons/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/bootstrap.css"/>
 </head>
 
 <body style="background-color:white;" class="col-md-12" id="mainPanel">
