--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,7 +25,7 @@
     <fieldset style="background-color:white;">
         <div class="icons" style="margin-bottom:10px;">
             <center>
-                <img src="../res/icons/icon.png" style="margin-bottom:-2%;"><br>
+                <img src="../res/icons/icon.png" style="margin-bottom:-2%;"><br><br>
                 <h4><strong id="about" data-i18n="about"></strong></h4>
             </center>
         </div>
