--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,52 +1,112 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="about_title" data-i18n="about_title"></title>
-    <link rel="shortcut icon" href="../res/icons/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="../res/icons/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/bootstrap.css"/>
-</head>
+    <link
+      rel="shortcut icon"
+      href="../res/icons/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="../res/icons/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/bootstrap.css" />
+  </head>
 
-<body style="background-color:white;" class="col-md-12" id="mainPanel">
-<main>
-    <header>
-        <nav class="icons" style="margin-right:-8px;">
-            <ul>
-                <li>
-                    <a href="https://github.com/jhonatasrm/social-helpers/" title="Github" target="_blank"><img src="../res/icons/github.png" width="20" height="20" style="margin-bottom:7px;margin-right:15px;"></a>
-                    <a href='https://ko-fi.com/S6S5S3WU' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com'/></a>
-                </li>
-            </ul>
+  <body style="background-color: white;" class="col-md-12" id="mainPanel">
+    <main>
+      <header>
+        <nav class="icons" style="margin-right: -8px;">
+          <ul>
+            <li>
+              <a
+                href="https://github.com/jhonatasrm/social-helpers/"
+                title="Github"
+                target="_blank"
+                ><img
+                  src="../res/icons/github.png"
+                  width="20"
+                  height="20"
+                  style="margin-bottom: 7px; margin-right: 15px;"
+              /></a>
+              <a href="https://ko-fi.com/S6S5S3WU" target="_blank"
+                ><img
+                  height="36"
+                  style="border: 0px; height: 36px;"
+                  src="https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0"
+                  border="0"
+                  alt="Buy Me a Coffee at ko-fi.com"
+              /></a>
+            </li>
+          </ul>
         </nav>
-    </header>
-    <fieldset style="background-color:white;">
-        <div class="icons" style="margin-bottom:10px;">
-            <center>
-                <img src="../res/icons/icon.png" style="margin-bottom:-2%;"><br><br>
-                <h4><strong id="about" data-i18n="about"></strong></h4>
-            </center>
+      </header>
+      <fieldset style="background-color: white;">
+        <div class="icons" style="margin-bottom: 10px;">
+          <center>
+            <img
+              src="../res/icons/icon.png"
+              style="margin-bottom: -2%;"
+            /><br /><br />
+            <h4><strong id="about" data-i18n="about"></strong></h4>
+          </center>
         </div>
-        <div class="alert alert-info"  align="justify" style="margin-left:10%;margin-right:10%;min-height:60px;">
-            <p  id="note" data-i18n="note"></p>
+        <div
+          class="alert alert-info"
+          align="justify"
+          style="margin-left: 10%; margin-right: 10%; min-height: 60px;"
+        >
+          <p id="note" data-i18n="note"></p>
         </div>
 
         <p align="justify" data-i18n="works" id="works"></p>
         <p align="justify" data-i18n="links" id="links"></p>
         <ul>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem1" data-i18n="aboutItem1"></li>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem2" data-i18n="aboutItem2"></li>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem3" data-i18n="aboutItem3"></li>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem4" data-i18n="aboutItem4"></li>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem5" data-i18n="aboutItem5"></li>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem6" data-i18n="aboutItem6"></li>
-            <li style="text-align:justify;margin-left:10px;" id="aboutItem7" data-i18n="aboutItem7"></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem1"
+            data-i18n="aboutItem1"
+          ></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem2"
+            data-i18n="aboutItem2"
+          ></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem3"
+            data-i18n="aboutItem3"
+          ></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem4"
+            data-i18n="aboutItem4"
+          ></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem5"
+            data-i18n="aboutItem5"
+          ></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem6"
+            data-i18n="aboutItem6"
+          ></li>
+          <li
+            style="text-align: justify; margin-left: 10px;"
+            id="aboutItem7"
+            data-i18n="aboutItem7"
+          ></li>
         </ul>
-        <div style="margin-top:2%; text-align:justify;" data-i18n="bugs" id="bugs"></div><br>
-    </fieldset>
-</main>
-<script type="text/javascript" src="../js/language.js"></script>
-</body>
+        <div
+          style="margin-top: 2%; text-align: justify;"
+          data-i18n="bugs"
+          id="bugs"
+        ></div>
+        <br />
+      </fieldset>
+    </main>
+    <script type="text/javascript" src="../js/language.js"></script>
+  </body>
 </html>
